 ══════════
  March 6th, 2020
 ══════════
  Main App (v3.6.1.0)
  • ADDED: Notification options on whether to alert when cookie is invalid.
  • FIXED: Added rate-limit to invalid cookie notifications.
  • FIXED: Logging Storage State Size Fix.
  • ADDED: WebSocket device id changed to add the the parent app id so you can have multiple instances (Hubitat Only).

  Action App (v3.6.1.0)
  • FIXED: Logging Storage State Size Fix.

  Zone App (v3.6.1.0)
  • FIXED: Logging Storage State Size Fix.

  Echo Device (v3.6.1.0)
  • FIXED: Logging Storage State Size Fix.
_____________________________________

 ══════════
  March 3rd, 2020
 ══════════
  Main App (v3.6.0.0)
  • UPDATED: Device detection metadata is now embedded into the app code to significantly reduce platform load and web calls (over 1 million requests an hour across the ST platform alone).
  • FIXED: Changes to the getDeviceActivity() logic to make it actually work (since the last update broke it), and should update quicker and more accurately.
  • FIXED: WebSocket Events not updating device info (Hubitat Only).

  Action App (v3.6.0.0)
  • FIXED: Bugs fixed and optimizations.

  Zone App (v3.6.0.0)
  • FIXED: Bugs fixed and optimizations.

  Echo Device (v3.6.0.0)
  • ADDED: Good News command that only plays back good news.
  • FIXED: Issue with Queue not working.
  • FIXED: Issue with Queue getting stuck in rare scenarios..
  • FIXED: Device Activity which was ruined after my last update.
  • FIXED: WebSocket Events not updating device info (Hubitat Only).
  • FIXED: Cleaned up device events filling up device history (ST)
  • FIXED: Reduced the number of Amazon web calls per device.
  • REMOVED: Removing the alexaNotifications attribute for now until I rebuild the Notifications features
  • UPDATED: Log cleanups.

  WebSocket Device (v3.3.0.0)
  • FIXED: WebSocket Events not working for Device Activity (Hubitat Only).

  Server (v2.4.0)