@@ -2,7 +2,7 @@
     "appDataVer": "4.0",
     "versions": {
         "mainApp": {
-            "ver": "3.6.1.0"
+            "ver": "3.6.1.1"
         },
         "actionApp": {
             "ver": "3.6.1.0"
@@ -17,7 +17,7 @@
             "ver": "3.3.0.0"
         },
         "server": {
-            "ver": "2.4.0"
+            "ver": "2.4.1"
         }
     },
     "amazonDomains": [
